--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -288,6 +288,15 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Install dependencies
+      run: |
+            sudo apt install -y libfuse2
+
+    - uses: awalsh128/cache-apt-pkgs-action@latest
+      with: 
+        packages: libx11-dev libxext-dev libwayland-dev libdecor-0-dev libxkbcommon-dev libglfw3-dev libgles2-mesa-dev clang build-essential libasound2-dev libpulse-dev libopenal-dev libudev-dev
+        version: 1.0
+
     - name: Cache CMake Configuration
       uses: actions/cache@v4 
       env: 
@@ -341,9 +350,13 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Install dependencies
+      run: |
+            sudo apt install -y libfuse2
+
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with: 
-        packages: libx11-dev libxext-dev libwayland-dev libdecor-0-dev libxkbcommon-dev libglfw3-dev libgles2-mesa-dev libfuse2 clang build-essential qt6-base-dev qt6-tools-dev qt6-multimedia-dev libasound2-dev libpulse-dev libopenal-dev libudev-dev
+        packages: libx11-dev libxext-dev libwayland-dev libdecor-0-dev libxkbcommon-dev libglfw3-dev libgles2-mesa-dev clang build-essential qt6-base-dev qt6-tools-dev qt6-multimedia-dev libasound2-dev libpulse-dev libopenal-dev libudev-dev
         version: 1.0      
 
     - name: Cache CMake Configuration
@@ -390,9 +403,13 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Install dependencies
+      run: |
+            sudo apt install -y libfuse2
+
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with: 
-        packages: libx11-dev libxext-dev libwayland-dev libdecor-0-dev libxkbcommon-dev libglfw3-dev libgles2-mesa-dev libfuse2 gcc-14 build-essential libasound2-dev libpulse-dev libopenal-dev libudev-dev
+        packages: libx11-dev libxext-dev libwayland-dev libdecor-0-dev libxkbcommon-dev libglfw3-dev libgles2-mesa-dev gcc-14 build-essential libasound2-dev libpulse-dev libopenal-dev libudev-dev
         version: 1.0      
 
     - name: Cache CMake Configuration
@@ -428,9 +445,13 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Install dependencies
+      run: |
+            sudo apt install -y libfuse2
+
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with: 
-        packages: libx11-dev libxext-dev libwayland-dev libdecor-0-dev libxkbcommon-dev libglfw3-dev libgles2-mesa-dev libfuse2 gcc-14 build-essential qt6-base-dev qt6-tools-dev qt6-multimedia-dev libasound2-dev libpulse-dev libopenal-dev libudev-dev
+        packages: libx11-dev libxext-dev libwayland-dev libdecor-0-dev libxkbcommon-dev libglfw3-dev libgles2-mesa-dev gcc-14 build-essential qt6-base-dev qt6-tools-dev qt6-multimedia-dev libasound2-dev libpulse-dev libopenal-dev libudev-dev
         version: 1.0     
 
     - name: Cache CMake Configuration
