--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -360,6 +360,8 @@ set(LIBC_SOURCES src/core/libraries/libc_internal/libc_internal.cpp
                  src/core/libraries/libc_internal/libc_internal.h
                  src/core/libraries/libc_internal/libc_internal_mspace.cpp
                  src/core/libraries/libc_internal/libc_internal_mspace.h
+                 src/core/libraries/libc_internal/libc_internal_io.cpp
+                 src/core/libraries/libc_internal/libc_internal_io.h
 )
 
 set(IME_LIB src/core/libraries/ime/error_dialog.cpp
