--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -368,6 +368,8 @@ set(LIBC_SOURCES src/core/libraries/libc_internal/libc_internal.cpp
                  src/core/libraries/libc_internal/libc_internal_str.h
                  src/core/libraries/libc_internal/libc_internal_stream.cpp
                  src/core/libraries/libc_internal/libc_internal_stream.h
+                 src/core/libraries/libc_internal/libc_internal_math.cpp
+                 src/core/libraries/libc_internal/libc_internal_math.h
 )
 
 set(IME_LIB src/core/libraries/ime/error_dialog.cpp
