--- a/REUSE.toml
+++ b/REUSE.toml
@@ -6,6 +6,8 @@ path = [
     "CMakeSettings.json",
     ".github/FUNDING.yml",
     ".github/shadps4.png",
+	".github/workflows/scripts/update_translation.sh",
+	".github/workflows/update_translation.yml",
     ".gitmodules",
     "dist/MacOSBundleInfo.plist.in",
     "dist/net.shadps4.shadPS4.desktop",
@@ -52,6 +54,7 @@ path = [
     "src/images/website.png",
     "src/shadps4.qrc",
     "src/shadps4.rc",
+	"src/qt_gui/translations/update_translation.sh",
 ]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "shadPS4 Emulator Project"
