--- a/.github/workflows/update_translation.yml
+++ b/.github/workflows/update_translation.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update:
-    if: github.repository == 'shadps4-emu/shadPS4'
+    if: github.repository == 'DanielSvoboda/shadPS4'
     name: "Update Translation"
     runs-on: ubuntu-22.04
     steps:
