--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -293,6 +293,8 @@ set(KERNEL_LIB src/core/libraries/kernel/sync/mutex.cpp
                src/core/libraries/kernel/posix_error.h
                src/core/libraries/kernel/aio.cpp
                src/core/libraries/kernel/aio.h
+               src/core/libraries/kernel/posix_net.cpp
+               src/core/libraries/kernel/posix_net.h
 )
 
 set(NETWORK_LIBS src/core/libraries/network/http.cpp
