--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,8 +54,9 @@ else()
 endif()
 
 if (ARCHITECTURE STREQUAL "x86_64")
-    # Set x86_64 target level to Sandy Bridge to generally match what is supported for PS4 guest code with CPU patches.
-    add_compile_options(-march=sandybridge)
+    # Target Sandy Bridge as a reasonable subset of instructions supported by PS4 and host CPUs.
+    # Note that the native PS4 architecture 'btver2' has been attempted but causes issues with M1 CPUs.
+    add_compile_options(-march=sandybridge -mtune=generic)
 endif()
 
 if (APPLE AND ARCHITECTURE STREQUAL "x86_64" AND CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL "arm64")
